# Moving-Average-Squeeze

./: GEM2-HULL-HOURLY-SCREENER.py  GEM2-HULL-HOURLY-SQUEEZE.py  README.md  all_tickers.txt  hma_squeeze_results.xlsx  pyproject.toml
