## Unified `pyproject.toml`
```toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hma-squeeze-system"
version = "0.1.0"  # Increment with updates
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
description = "A two-phase HMA squeeze trading system for stock analysis."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Choose a license!
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy",
    "yfinance",
    "rich",
    "pydantic",
    "tqdm",
    "openpyxl", # For the screener
    "pandas",   # For the analyzer
    "plotly",   # For the analyzer
    "pandera",  # For the analyzer
]

[project.urls]
"Homepage" = "https://github.com/yourusername/hma-squeeze-system" # REPLACE!
"Bug Tracker" = "https://github.com/yourusername/hma-squeeze-system/issues" # REPLACE!

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "I", "UP", "C4"]
ignore = ["E501"]
src = ["."]

[tool.ruff.format]
# Use the `black` formatter.
quote-style = "double"
# Like Black, indent with 4 spaces.
indent-style = "space"
line-ending = "auto"

[tool.black]
line-length = 88
target-version = ['py311']